Patient box alignment fix
git-svn-id: http://clinicdb.rubyforge.org/svn@133 d096a246-4d2d-4550-b7bf-e545da479d79

--- a/public/stylesheets/patient_box.css
+++ b/public/stylesheets/patient_box.css
@@ -5,6 +5,7 @@
 	margin-bottom: 15px;
 	border-left: #aad solid thin;
 	border-bottom: #aad solid thin;
+	text-align: left;
 }
 
 .patient_box_editlink {
